--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -1,5 +1,5 @@
 .cabecalho {
-    background-color: #424E61;
+    background-color: #11b14e;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -18,4 +18,21 @@
 *{
     margin: 0;
     padding: 0;
+}
+.SITE-DE-APOSTAS{
+    width: 30%;
+}
+.APOSTAS{
+        background-image: linear-gradient(#1bad4c, #b7ceb2); 
+        color:rgb(255, 255, 255);
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        padding: 24px 0;
+    }
+.APOSTAS-CONTEUDO{
+    width: 75%;
+}
+.apostas-titulo{
+    padding: 24px 0;
 }
